--- a/templates/client/css/style.css
+++ b/templates/client/css/style.css
@@ -668,6 +668,7 @@ Version: 1.0
 	margin-top:30px;
 }
 .services .single-service {
+	height: 292px!important;
 	position: relative;
 	background: #fff;
 	padding: 60px 15px;
